2008-05-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/category/SlidingCategoryDataset.java: New class,
    * source/org/jfree/data/gantt/SlidingGanttCategoryDatsaet.java: Likewise,
    * tests/org/jfree/data/category/SlidingCategoryDatasetTests.java: 
    New tests,
    * tests/org/jfree/data/gantt/SlidingGanttCategoryDatasetTests.java: 
    Likewise.

2008-05-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/gantt/TaskSeries.java
    (clone): New method override,
    * source/org/jfree/data/gantt/TaskSeriesCollection.java
    (clone): Likewise.

2008-05-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/block/EmptyBlock.java
    (arrange): Use constraint.

2008-05-09  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/category/DefaultCategoryDataset.java:
    Implemented PublicCloneable.

2008-05-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (chartMouseListeners): Marked this field transient,
    (chartBuffer): Likewise,
    (writeObject): New method, 
    (readObject): Likewise.    

2008-05-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (zoomPoint): Changed from Point to Point2D,
    (getPointInRectangle): Changed return type to Point2D, and no longer round
    the coordinates in the returned point,
    (mouseReleased): Tidied up for readability,
    (restoreAutoDomainBounds): Updated for modified zoomPoint type,
    (restoreAutoRangeBounds): Likewise.

2008-05-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BarRenderer.java
    (drawItem): Ensure that minimumBarLength, if used, extends the non-base
    end of the bar.

2008-05-05  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1924543 by Richard West: